deploy: 2a9fb5e738e61cab4a8471b3fd377525d50bdc73

--- a/5_Core_identifiers/index.html
+++ b/5_Core_identifiers/index.html
@@ -184,7 +184,7 @@ is no file <em>name</em> mentioned here).</p>
 </ol>
 </li>
 </ol>
-<p>The intrinsic identifier of the directory is the SHA1 of the of the byte sequence obtained by juxtaposing</p>
+<p>The intrinsic identifier of the directory is the SHA1 of the byte sequence obtained by juxtaposing</p>
 <ul>
 <li>the ASCII string <code>"tree"</code> (without quotes),</li>
 <li>an ASCII space,</li>
@@ -265,7 +265,7 @@ a given point in time of its development on May 4th 2017.</p>
 </ul>
 </li>
 </ul>
-<p>The intrinsic identifier of the revision is the SHA1 of the of the byte sequence obtained by juxtaposing</p>
+<p>The intrinsic identifier of the revision is the SHA1 of the byte sequence obtained by juxtaposing</p>
 <ul>
 <li>the ASCII string <code>"commit"</code> (without quotes),</li>
 <li>an ASCII space,</li>
@@ -373,7 +373,7 @@ the <a href="https://archive.softwareheritage.org/swh:1:rel:22ece559cc7cc2364edc
 <p>Note that, akin to the serialization of directories, there is no separator between
    entries. Because of alias branches, target identifiers are of arbitrary
    length and are length-encoded to avoid ambiguity.</p>
-<p>The intrinsic identifier of the snapshot is the SHA1 of the of the byte sequence obtained by juxtaposing</p>
+<p>The intrinsic identifier of the snapshot is the SHA1 of the byte sequence obtained by juxtaposing</p>
 <ul>
 <li>the ASCII string <code>"snapshot"</code> (without quotes),</li>
 <li>an ASCII space,</li>
