deploy: c653719427bb2e54b3fc9ca9ff2ca264dd45b5a0

--- a/5_Core_identifiers/index.html
+++ b/5_Core_identifiers/index.html
@@ -378,7 +378,7 @@ the <a href="https://archive.softwareheritage.org/swh:1:rel:22ece559cc7cc2364edc
 <li>and the previously obtained serialization.</li>
 </ul>
 <p>As an example, <code>swh:1:snp:c7c108084bc0bf3d81436bf980b46e98bd338453</code> is the SWHID computed from
-<a href="https://archive.softwareheritage.org/c7c108084bc0bf3d81436bf980b46e98bd338453">a snapshot of the entire Darktable Git repository</a> as it was on 4 May 2017 on GitHub.</p>
+<a href="https://archive.softwareheritage.org/swh:1:snp:c7c108084bc0bf3d81436bf980b46e98bd338453">a snapshot of the entire Darktable Git repository</a> as it was on 4 May 2017 on GitHub.</p>
 <h2 id="note-on-compatibility-with-git">Note on compatibility with Git</h2>
 <p>SWHIDs for contents, directories, revisions, and releases are, at present,
 compatible with the way the current version of <a href="https://git-scm.com/">Git</a> 
