--- a/B.Bibliography/index.html
+++ b/B.Bibliography/index.html
@@ -117,6 +117,8 @@
                 <h1 id="bibliography">Bibliography</h1>
 <p>The following documents are useful references for implementers and users of this document:</p>
 <p>[1] <em>SoftWare Heritage persistent IDentifiers</em>; SoftWare Heritage, <a href="https://docs.softwareheritage.org/devel/swh-model/persistent-identifiers.html">https://docs.softwareheritage.org/devel/swh-model/persistent-identifiers.html</a></p>
+<p>[Stevens2013Counter] Marc Stevens. Counter-cryptanalysis. In Advances in Cryptology, CRYPTO 2013: 33rd Annual Cryptology Conference, Santa Barbara, CA, USA, August 18-22, 2013. Proceedings, Part I (pp. 129-146). Springer Berlin Heidelberg. Open access preprint: <a href="https://eprint.iacr.org/2013/358">https://eprint.iacr.org/2013/358</a></p>
+<p>[Stevens2017Shattered] Marc Stevens, Elie Bursztein, Pierre Karpman, Ange Albertini, Yarik Markov. The First Collision for Full SHA-1. In Advances in Cryptology, CRYPTO 2017: 37th Annual International Cryptology Conference, Santa Barbara, CA, USA, August 20–24, 2017, Proceedings, Part I 37 (pp. 570-596). Springer International Publishing. Open access preprint: <a href="https://eprint.iacr.org/2017/190">https://eprint.iacr.org/2017/190</a></p>
               
             </div>
           </div><footer>
