--- a/3.Terms_and_definitions/index.html
+++ b/3.Terms_and_definitions/index.html
@@ -127,15 +127,15 @@ for use in standardization at the following addresses:</p>
 </ul>
 <p><strong>3.1</strong></p>
 <p><strong>branch</strong></p>
-<p>its definition</p>
+<p>In the context of version control systems, a branch is a parallel line of development that stems from the main line (commonly known as the "main" or "master" branch). It allows developers to isolate their work for a particular feature or bug fix without affecting the main line of development. Once the work is complete and tested, it can be merged back into the main branch.</p>
 <p><strong>git</strong></p>
-<p>its definition</p>
+<p>Git is a distributed version control system created by Linus Torvalds in 2005. It allows teams of programmers to work on the same code base without overwriting each other's changes. Git is known for its speed, data integrity, and support for distributed, non-linear workflows. Each Git directory on every computer is a full-fledged repository with complete history and version tracking abilities, independent of network access or a central server.</p>
 <p><strong>hierarchical file system</strong></p>
-<p>its definition</p>
+<p>A hierarchical file system is a method of organizing and managing files in a computer where data is stored hierarchically (in a structure often visualized as a tree). It uses directories (or 'folders') to organize files into a tree structure. Each directory can contain more files and directories, thus forming a hierarchical structure.</p>
 <p><strong>intrinsic identifier</strong></p>
 <p>An identifier that can be computed directly from the object that it identifies, without needing a registry. Typical examples are cryptographically strong hashes.</p>
 <p><strong>repository</strong></p>
-<p>its definition</p>
+<p>In the context of version control systems, a repository is a storage location for software development artifacts including but not limited to source code, build scripts, documentation, etc. It often includes metadata about the stored items, such as version number, author, date of the last modification, etc. Repositories can be local or remote and are managed by version control systems like Git.</p>
 <p><strong>SHA1</strong></p>
 <p><em>SHA-1</em> (short for "Secure Hash Algorithm 1", also stylized as "<em>SHA1</em>") is a hash function that takes as input a sequence of bytes and produces a 160-bit (20-byte) hash value.
 The returned value is called <em>SHA1 checksum</em>, or simply <em>SHA1</em> when there is no risk of ambiguity between the function and the returned value.
@@ -147,7 +147,7 @@ For the purpose of this specification document, the SHA1 function is therefore c
 <p>When such a collision is detected during SHA1 computation, no SHA1 can be obtained for the object in question and hence, depending on the context, a valid SWHID might not exist for it.</p>
 <p>Note that in most cases SHA1 in this specification are computed on objects after adding specific headers to them, making "trivial" collision-prone files still perfectly valid and hence referenceable using SWHIDs.</p>
 <p><strong>version control system</strong></p>
-<p>its definition</p>
+<p>A version control system (VCS), also known as source control or revision control, is a software tool that helps manage different versions of software development artifacts. It keeps track of all changes made to the code, allows multiple developers to work on the same codebase, and provides mechanisms for merging changes, reverting changes, and branching and merging of code. Examples include Git, Mercurial, and Subversion.</p>
               
             </div>
           </div><footer>
