--- a/B.Bibliography/index.html
+++ b/B.Bibliography/index.html
@@ -110,7 +110,7 @@
           <div role="main" class="document" itemscope="itemscope" itemtype="http://schema.org/Article">
             <div class="section" itemprop="articleBody">
               
-                <h1 id="bibliography">Bibliography</h1>
+                <h1 id="annex-b-bibliography-informative">Annex B Bibliography (Informative)</h1>
 <p>The following documents are useful references for implementers and users of this document:</p>
 <p>[1] <em>SoftWare Heritage persistent IDentifiers</em>; SoftWare Heritage, <a href="https://docs.softwareheritage.org/devel/swh-model/persistent-identifiers.html">https://docs.softwareheritage.org/devel/swh-model/persistent-identifiers.html</a></p>
 <p>[Stevens2013Counter] Marc Stevens. Counter-cryptanalysis. In Advances in Cryptology, CRYPTO 2013: 33rd Annual Cryptology Conference, Santa Barbara, CA, USA, August 18-22, 2013. Proceedings, Part I (pp. 129-146). Springer Berlin Heidelberg. Open access preprint: <a href="https://eprint.iacr.org/2013/358">https://eprint.iacr.org/2013/358</a></p>
