--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <div class="section" itemprop="articleBody">
               
                 <h1 id="the-swhid-specification-version-030">The SWHID Specification Version 0.3.0</h1>
-<p>Copyright © 2022- SWHID Contributors.</p>
+<p>Copyright © 2022-2023 SWHID Contributors.</p>
 <p>This work is licensed under the Community Specification License 1.0.</p>
 <p>With thanks to
 Alexios Zavras,
@@ -168,5 +168,5 @@ for their contributions and assistance.</p>
 
 <!--
 MkDocs version : 1.3.0
-Build Date UTC : 2023-06-01 07:50:36.538707+00:00
+Build Date UTC : 2023-06-13 10:59:47.088211+00:00
 -->
