--- a/6_Qualified_identifiers/index.html
+++ b/6_Qualified_identifiers/index.html
@@ -141,18 +141,15 @@ sequence of qualifiers that may identify subparts of a software artefact
 identifier and the optional qualifiers, as well as between qualifiers. Each
 qualifier is specified as a key/value pair, using <code>=</code> as a separator.</p>
 <p>The following <em>context qualifiers</em> are available:</p>
-<p><em>TODO</em> For each one: Description, Metadata, Intent, Examples</p>
 <h2 id="61-fragment-qualifiers">6.1 Fragment qualifiers</h2>
 <h3 id="611-lines-qualifier">6.1.1 Lines qualifier</h3>
-<p>This qualifier allows to designate a line range inside a content.
-The range can be a single line number, or a pair of line numbers
-separated by <code>-</code>.</p>
+<p>A "line" in the context of a file content refers to a sequence of characters that ends with a line break. This line can contain text, code, or any other form of data. In this specification, the line break is the ASCII LF character.
+The "lines" qualifier allows to designate a line range inside a content.
+The range can be a single line number, or a pair of line numbers separated by the ASCII <code>-</code> character.</p>
 <p>For example, <a href="https://archive.softwareheritage.org/swh:1:cnt:4d99d2d18326621ccdd70f5ea66c2e2ac236ad8b;lines=9-15"><code>swh:1:cnt:4d99d2d18326621ccdd70f5ea66c2e2ac236ad8b;lines=9-15</code></a>
 designates the function <code>generate_intput_stream</code> that is found at lines 9 to 15 of the <em>content</em> with core SWHID <code>swh:1:cnt:4d99d2d18326621ccdd70f5ea66c2e2ac236ad8b</code>.</p>
-<p>Notice that the notion of "line number" is not always well defined: the content
-may be a binary file, or a file that uses non standard line termination
-character(s).</p>
-<p><em>TODO</em>: decide whether we prescribe to use only the Unix line terminator (this will add extra ^M to DOS/Windows lines)</p>
+<p>Notice that the notion of "line number" is not always meaningful: the content
+may be a binary file, or a file that uses non standard line termination character(s).</p>
 <h2 id="62-context-qualifiers">6.2 Context qualifiers</h2>
 <h3 id="621-origin-qualifier">6.2.1 Origin qualifier</h3>
 <p>This qualifier allows to declare the <em>software origin</em> where the
@@ -171,21 +168,19 @@ of the repository where the object has been found or observed.</p>
 indicates that the content seen previously with the function <code>generate_intput_stream</code> has
 been seen in the Git repository at <code>https://gitorious.org/ocamlp3l/ocamlp3l_cvs.git</code>, when
 its full state had the SWHID core identifier <code>swh:1:snp:d7f1b9eb7ccb596c2622c4780febaa02549830f9</code>. </p>
-<p><em>TODO</em>: explain where <code>visit</code> comes from?</p>
 <h3 id="623-anchor-qualifier">6.2.3 Anchor qualifier</h3>
 <p>This qualifier is used in conjunction with the <code>path</code> qualifier.
 It allows to identify a node in the Merkle DAG relative to which
 a <em>path to the object</em> is specified, as the core identifier of a directory,
-a revision, a release or a snapshot. See below for an example.</p>
+a revision, a release or a snapshot. See the example provided for the
+<code>path</code> qualifier.</p>
 <h3 id="624-path-qualifier">6.2.4 Path qualifier</h3>
 <p>This qualifier allows to declare the <em>absolute file path</em>, from the <em>root
-directory</em> associated to the <em>anchor node</em>, to the object designated by the
-core SWHID identifier; when the anchor denotes a directory or a revision,
-and almost always when it\'s a release, the root directory is uniquely
-determined; when the anchor denotes a snapshot, the root directory is the
-one pointed to by <code>HEAD</code> branch (possibly indirectly), and undefined if such a
-reference is missing.</p>
-<p><em>TODO</em>: clarify this section (HEAD, branch, etc.)</p>
+directory</em> associated to the <em>anchor node</em>, to the object designated by the core
+SWHID identifier; when the anchor denotes a directory, a revision or a release,
+the root directory is uniquely determined; when the anchor denotes a snapshot,
+the root directory is the first directory reachable from the <code>HEAD</code> branch,
+and undefined if such a reference is missing.</p>
 <p>For example, <a href="https://archive.softwareheritage.org/swh:1:cnt:4d99d2d18326621ccdd70f5ea66c2e2ac236ad8b;origin=https://gitorious.org/ocamlp3l/ocamlp3l_cvs.git;visit=swh:1:snp:d7f1b9eb7ccb596c2622c4780febaa02549830f9;anchor=swh:1:rev:2db189928c94d62a3b4757b3eec68f0a4d4113f0;path=/Examples/SimpleFarm/simplefarm.ml"><code>swh:1:cnt:4d99d2d18326621ccdd70f5ea66c2e2ac236ad8b;origin=https://gitorious.org/ocamlp3l/ocamlp3l_cvs.git;visit=swh:1:snp:d7f1b9eb7ccb596c2622c4780febaa02549830f9;anchor=swh:1:rev:2db189928c94d62a3b4757b3eec68f0a4d4113f0;path=/Examples/SimpleFarm/simplefarm.ml</code></a>
 indicates that the content seen previously with the function <code>generate_intput_stream</code> has
 been seen in the Git repository at <code>https://gitorious.org/ocamlp3l/ocamlp3l_cvs.git</code>, when
@@ -194,7 +189,7 @@ its full state had the SWHID core identifier <code>swh:1:snp:d7f1b9eb7ccb596c262
 <p>We recommend to equip identifiers meant to be shared with as many
 qualifiers as possible. While qualifiers may be listed in any order, it
 is good practice to present them in the following order:
-<code>origin</code>, <code>visit</code>, <code>anchor</code>, <code>path</code> or <code>lines</code>. Redundant information
+<code>origin</code>, <code>visit</code>, <code>anchor</code>, <code>path</code> and <code>lines</code>. Redundant information
 should be omitted: for example, if the <em>visit</em> is present, and the
 <em>path</em> is relative to the snapshot indicated there, then the <em>anchor</em>
 qualifier is superfluous; similarly, if the <em>path</em> is empty, it may be
